# working-resume

./: .gitignore  .yamllint.yml  CLAUDE.md  README.md  Taskfile.yml  bank.py  pyproject.toml  settings.py  tailor.py
tailored/slate/: Preamble.j2.typ  __init__.py
tailored/slate/entries/: EducationEntry.j2.typ  ExperienceEntry.j2.typ  OneLineEntry.j2.typ
