[project]
name = "working-resume"
version = "1.0.0"
description = "A resume tailoring thing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "commitizen>=4.15.1",
    "detect-secrets>=1.5.0",
    "idna>=3.17",
    "pydantic-settings>=2.14.0",
    "pypdf>=4.0",
    "pyyaml>=6.0",
    "rendercv[full]",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "yamllint>=1.38.0",
]

[tool.uv]
exclude-newer = "7 days"
